--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Foreman Tasks =============",
   "main": "index.js",
+  "tfmBuildConfig": "config/tfm-builder.config.js",
   "scripts": {
+    "build": "tfm-build --mode=production --config=config/tfm-builder.config.js",
     "lint": "tfm-lint --plugin -d /webpack",
     "test": "tfm-test --plugin",
     "test:watch": "tfm-test --plugin --watchAll",
@@ -26,16 +28,17 @@
   },
   "dependencies": {
     "c3": "^0.4.11",
-    "humanize-duration": "^3.20.1",
-    "react-intl": "^2.8.0"
+    "humanize-duration": "^3.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.0",
-    "@theforeman/builder": "^4.0.2",
-    "@theforeman/eslint-plugin-foreman": "4.0.5",
-    "@theforeman/stories": "^4.0.2",
-    "@theforeman/test": "^4.0.2",
-    "@theforeman/vendor-dev": "^4.0.2",
+    "@theforeman/builder": "../foreman-js/packages/builder",
+    "@theforeman/eslint-plugin-foreman": "../foreman-js/packages/eslint-plugin-foreman",
+    "@theforeman/stories": "../foreman-js/packages/stories",
+    "@theforeman/test": "../foreman-js/packages/test",
+    "@theforeman/vendor": "../foreman-js/packages/vendor",
+    "@theforeman/vendor-core": "../foreman-js/packages/vendor-core",
+    "@theforeman/vendor-dev": "../foreman-js/packages/vendor-dev",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "jed": "^1.1.1",
